--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ zuul:
       url: http://noots-service:8091/noot
     account:
       path: /account/**
-      url: http://localhost:8081/account
+      url: http://authentication-service:8081/account
     trends:
       path: /hastag/**
       url: http://hashtag-service:8071/hashtag
