--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,13 @@ zuul:
   routes:
     noots:
       path: /noot/**
-      url: http://172.18.0.4:8091/noot
+      url: http://noot-service:8091/noot
     account:
       path: /account/**
-      url: http://172.18.0.5:8081/account
+      url: http://account-service:8081/account
     trends:
       path: /hastag/**
-      url: http://172.18.0.11:8071/hashtag
+      url: http://hashtag-service:8071/hashtag
     follow:
       path: /follow/**
-      url: http://172.18.0.3:8061/follow
+      url: http://follow-service:8061/follow
